changed the code of the controllers (products) + swagger add  getAllExercises +swagger
